<resources>
    <string name="app_name">TaskMinder</string>
    <string name="welcome">Welcome To\nTaskMinder</string>
    <string name="w_note">Effortlessly organize tasks and boost your productivity.</string>
    <string name="getStart">Get Started</string>
    <string name="user">Anne Perera</string>
    <string name="email">anneperera111@gmail.com</string>
    <string name="edit">Edit</string>
    <string name="aboutus">About Us</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="taskAdd">Add task</string>
    <string name="task1">05/12\nDSA lab exam 02</string>
    <string name="task2">05/12\nBirthDay Party</string>
    <string name="task3">05/12\nRepair water pipe</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>