<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="220dp"
            android:layout_height="249dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/startpic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="268dp"
            android:layout_height="92dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15sp"
            android:text="@string/w_note"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="30sp"
            android:backgroundTint="@color/Yellow"
            android:padding="15sp"
            android:text="@string/getStart"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>