<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:srcCompat="@drawable/header" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="179dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/material_dynamic_neutral20"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/Yellow"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingRight="100dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="41dp"
                android:layout_height="33dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                app:srcCompat="@drawable/settingi" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingRight="100dp">

            <ImageView
                android:id="@+id/imagesupport"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                app:srcCompat="@drawable/supporti" />

            <TextView
                android:id="@+id/textsupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/support"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingRight="100dp">

            <ImageView
                android:id="@+id/imageshare"
                android:layout_width="19dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                app:srcCompat="@drawable/sharei" />

            <TextView
                android:id="@+id/textshare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingRight="100dp">

            <ImageView
                android:id="@+id/imageabtus"
                android:layout_width="41dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                app:srcCompat="@drawable/abouti" />

            <TextView
                android:id="@+id/textaboutus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/aboutus"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/footer"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeimage4"
                android:layout_width="94dp"
                android:layout_height="41dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/listimage4"
                android:layout_width="94dp"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/tasks" />

            <ImageView
                android:id="@+id/favimage4"
                android:layout_width="94dp"
                android:layout_height="41dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/calender" />

            <ImageView
                android:id="@+id/profileimage4"
                android:layout_width="92dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/profile2" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>